--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8" />
   <title>Compressor de Vídeo para Discord</title>
 
-  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js"></script>
-  <script src="https://unpkg.com/@ffmpeg/util@0.12.6/dist/util.min.js"></script>
+  <!-- FFmpeg -->
+  <script defer src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js"></script>
+
+  <!-- Seu script -->
+  <script defer src="script.js"></script>
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
   <h1>🎥 Compressor de Vídeo para Discord</h1>
